--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,14 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+.reveal {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 2s ease-in-out;
+}
+
+.reveal.show {
+  opacity: 1;
+  transform: translateX(0px);
+}
